--- a/app/src/main/res/layout/activity_main5.xml
+++ b/app/src/main/res/layout/activity_main5.xml
@@ -11,7 +11,7 @@
         android:layout_marginTop="100dp"
         android:layout_marginEnd="140dp"
         android:layout_marginBottom="580dp"
-        android:text="Ajustes"
+        android:text="@string/ajustes"
         android:textAlignment="textStart"
         android:textSize="30sp"
         android:textStyle="bold"
@@ -92,7 +92,7 @@
         android:layout_marginTop="90dp"
         android:layout_marginEnd="85dp"
         android:layout_marginBottom="200dp"
-        android:text="POKEDEX"
+        android:text="@string/pokedex"
         android:textAlignment="textStart"
         android:textSize="25"
         android:textStyle="bold"
