--- a/app/src/main/res/layout/activity_miniaturaversus.xml
+++ b/app/src/main/res/layout/activity_miniaturaversus.xml
@@ -10,34 +10,54 @@
         android:id="@+id/imageView"
         android:layout_width="414dp"
         android:layout_height="736dp"
-        app:srcCompat="@color/colorAccent"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-1dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@color/colorAccent" />
 
     <ImageView
         android:id="@+id/imageView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="36dp"
-        tools:layout_editor_absoluteY="28dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="256dp"
+        android:layout_marginBottom="580dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:layout_constraintVertical_bias="0.0"
         tools:srcCompat="@tools:sample/avatars" />
 
     <ImageView
         android:id="@+id/imageView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="256dp"
-        tools:layout_editor_absoluteY="570dp"
+        android:layout_marginStart="250dp"
+        android:layout_marginTop="572dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="36dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
         android:id="@+id/button6"
         android:layout_width="156dp"
         android:layout_height="63dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginTop="653dp"
+        android:layout_marginEnd="235dp"
         android:text="Continuar"
         android:textColor="#000000"
         android:textColorHighlight="#00C22929"
-        tools:layout_editor_absoluteX="23dp"
-        tools:layout_editor_absoluteY="653dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imageView"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
