--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -23,7 +23,7 @@
         android:layout_height="34dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/bangers"
+        android:fontFamily="sans-serif"
         android:text="@string/acerca_de_nosotros"
         android:textColor="#C6A81B1B"
         android:textSize="24sp"
@@ -37,7 +37,7 @@
         android:layout_height="42dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="188dp"
-        android:fontFamily="@font/bangers"
+        android:fontFamily="sans-serif"
         android:text="@string/como_jugar"
         android:textColor="#C6A81B1B"
         android:textSize="24sp"
@@ -51,7 +51,7 @@
         android:layout_height="35dp"
         android:layout_marginStart="44dp"
         android:layout_marginTop="368dp"
-        android:fontFamily="@font/bangers"
+        android:fontFamily="sans-serif"
         android:text="@string/faq"
         android:textColor="#C6A81B1B"
         android:textSize="24sp"
