--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -16,10 +16,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-w    <TextView
+
+
+    <TextView
         android:id="@+id/textView3"
-        android:layout_width="114dp"
-        android:layout_height="40dp"
+        android:layout_width="140dp"
+        android:layout_height="36dp"
         android:layout_marginStart="116dp"
         android:layout_marginTop="84dp"
         android:fontFamily="sans-serif"
@@ -45,7 +47,7 @@ w    <TextView
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/nicknamehome"
         android:layout_width="111dp"
         android:layout_height="42dp"
         android:layout_marginStart="76dp"
@@ -57,19 +59,6 @@ w    <TextView
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioButton
-        android:id="@+id/radioButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="260dp"
-        android:clickable="true"
-        android:text="@string/pikachu"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:focusable="true" />
 
     <Button
         android:id="@+id/button5"
@@ -86,41 +75,62 @@ w    <TextView
         android:layout_width="146dp"
         android:layout_height="37dp"
         android:layout_marginStart="172dp"
-        android:layout_marginTop="368dp"
+        android:layout_marginTop="390dp"
         android:text="@string/estad_sticas"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <RadioButton
-        android:id="@+id/radioButton5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="368dp"
-        android:text="@string/squirtle"
-        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/stats"
         android:layout_width="146dp"
         android:layout_height="37dp"
         android:layout_marginStart="172dp"
-        android:layout_marginTop="312dp"
+        android:layout_marginTop="325dp"
         android:text="@string/estad_sticas"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RadioButton
-        android:id="@+id/radioButton4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="312dp"
-        android:text="@string/charmander"
-        android:textSize="15sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <RadioGroup
+        android:id="@+id/opciones"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <RadioButton
+            android:id="@+id/radioButton1"
+            android:layout_width="95dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="260dp"
+            android:checked="false"
+            android:clickable="true"
+            android:focusable="true"
+            android:text="@string/pikachu"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/radioButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="33dp"
+            android:text="@string/charmander"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <RadioButton
+            android:id="@+id/radioButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="36dp"
+            android:layout_marginTop="33dp"
+            android:text="@string/squirtle"
+            android:textSize="15sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
