--- a/app/src/main/res/layout/activity_main6.xml
+++ b/app/src/main/res/layout/activity_main6.xml
@@ -46,7 +46,7 @@
         tools:srcCompat="@tools:sample/avatars" />
 
     <Button
-        android:id="@+id/button6"
+        android:id="@+id/continueb"
         android:layout_width="156dp"
         android:layout_height="63dp"
         android:layout_marginStart="23dp"
